--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
 			<li class="label"><a href="" data-for-what="sheet-2">Quisque eu urna</a></li>
 			<li class="label"><a href="" data-for-what="sheet-3">Donec nisi lectus</a></li>
 		</ul>
-		<div class="sheet sheet-1">
+		<article class="sheet sheet-1">
 			<p>Proin elit arcu, rutrum commodo, vehicula tempus, commodo a, risus. Curabitur nec arcu. Donec sollicitudin mi sit amet mauris. Nam elementum quam ullamcorper ante. Etiam aliquet massa et lorem. Mauris dapibus lacus auctor risus. Aenean tempor ullamcorper leo. Vivamus sed magna quis ligula eleifend adipiscing. Duis orci. Aliquam sodales tortor vitae ipsum. Aliquam nulla. Duis aliquam molestie erat. Ut et mauris vel pede varius sollicitudin. Sed ut dolor nec orci tincidunt interdum. Phasellus ipsum. Nunc tristique tempus lectus.
 			</p>
-		</div>
-		<div class="sheet sheet-2 hide">
+		</article>
+		<article class="sheet sheet-2 hide">
 			<p>Mauris eleifend est et turpis. Duis id erat. Suspendisse potenti. Aliquam vulputate, pede vel vehicula accumsan, mi neque rutrum erat, eu congue orci lorem eget lorem. Vestibulum non ante. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Fusce sodales. Quisque eu urna vel enim commodo pellentesque. Praesent eu risus hendrerit ligula tempus pretium. Curabitur lorem enim, pretium nec, feugiat nec, luctus a, lacus.
 			</p>
 			<p>Duis cursus. Maecenas ligula eros, blandit nec, pharetra at, semper at, magna. Nullam ac lacus. Nulla facilisi. Praesent viverra justo vitae neque. Praesent blandit adipiscing velit. Suspendisse potenti. Donec mattis, pede vel pharetra blandit, magna ligula faucibus eros, id euismod lacus dolor eget odio. Nam scelerisque. Donec non libero sed nulla mattis commodo. Ut sagittis. Donec nisi lectus, feugiat porttitor, tempor ac, tempor vitae, pede. Aenean vehicula velit eu tellus interdum rutrum. Maecenas commodo. Pellentesque nec elit. Fusce in lacus. Vivamus a libero vitae lectus hendrerit hendrerit.
 			</p>
-		</div>
+		</article>
 		<div class="sheet sheet-3 hide">
 			<form action="none">
 				<label for="first-name">Firstname:</label><input type="text" id="first-name"><div class="helping">Введіть тут своє ім'я</div>
@@ -35,5 +35,6 @@
 			</form>
 		</div>
 	</div>
+	<div class="rabbid"><a href="" class="close">X</a></div>
 </body>
 </html>
